@@ -212,3 +212,10 @@ settings[alpha_region_footer_columns] = '12'
 settings[alpha_region_footer_suffix] = ''
 settings[alpha_region_footer_weight] = ''
 settings[alpha_region_footer_css] = ''
+
+; Information added by drupal.org packaging script on 2011-07-25
+version = "7.x-3.0-rc1"
+core = "7.x"
+project = "omega"
+datestamp = "1311627419"
+
