@@ -9,15 +9,17 @@
       <?php endif; ?>
       <?php if ($site_name || $site_slogan): ?>
       <?php $class = $site_name_hidden && $site_slogan_hidden ? ' element-invisible' : ''; ?>
-      <hgroup class="site-name-slogan<?php print $class; ?>">
-        <?php $class = $site_name_hidden && !$site_slogan_hidden ? ' element-invisible' : ''; ?>
-        <?php if ($is_front): ?>
+      <hgroup class="site-name-slogan<?php print $class; ?>">        
+        <?php if ($site_name): ?>
+        <?php $class = $site_name_hidden ? ' element-invisible' : ''; ?>
+        <?php if ($is_front): ?>        
         <h1 class="site-name<?php print $class; ?>"><?php print $linked_site_name; ?></h1>
         <?php else: ?>
         <h2 class="site-name<?php print $class; ?>"><?php print $linked_site_name; ?></h2>
         <?php endif; ?>
-        <?php print ($site_slogan_hidden && !$site_name_hidden ? ' element-invisible' : ''); ?>
+        <?php endif; ?>
         <?php if ($site_slogan): ?>
+        <?php $class = $site_slogan_hidden ? ' element-invisible' : ''; ?>
         <h6 class="site-slogan<?php print $class; ?>"><?php print $site_slogan; ?></h6>
         <?php endif; ?>
       </hgroup>
